cmake_minimum_required(VERSION 3.13)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp headers/demo.cpp headers/demo.h headers/graph.cpp headers/graph.h headers/competitve_class.cpp headers/competitve_class.h headers/dp_.cpp headers/dp_.h headers/stl.cpp headers/stl.h headers/JXJ.cpp headers/JXJ.h headers/heap.cpp headers/heap.h headers/b_t.cpp headers/b_t.h headers/seg_tree.cpp headers/seg_tree.h headers/seg2tree.cpp headers/seg2tree.h headers/trie.cpp headers/trie.h)